[package]
name = "emotions-wheel-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Emotions wheel written in Rust that draws to a <canvas/> element in the browser via WASM"
repository = "https://github.com/abhillman/emotions-wheel-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
emotions = "0.1.1"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-log = "0.3.1"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasPattern",
] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
